--- a/src/components/Description/style.module.scss
+++ b/src/components/Description/style.module.scss
@@ -35,7 +35,7 @@
             left: calc(100% - 200px); 
             width: 150px;
             height: 150px;
-            background-color: #091f68;
+            background-color: #1656EC;
             color: white;
             border-radius: 50%;
             position: absolute;
